--- a/src/app/components/vehicle-verification/vehicle-verification.component.css
+++ b/src/app/components/vehicle-verification/vehicle-verification.component.css
@@ -115,3 +115,26 @@ html, body {
     white-space: pre-wrap;
     word-wrap: break-word;
   }
+
+  .reduced-width-form {
+    width: 500px;
+    margin: 0 auto;
+  }
+  .form-row {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+  }
+  label {
+    font-weight: bold;
+    margin-right: 10px;
+  }
+  span {
+    flex-grow: 1;
+    text-align: right;
+  }
+  .reduced-width-button {
+    width: 100px;
+    margin: 20px auto;
+    display: block;
+  }
